# aircheq

./: .gitignore  Pipfile  README.md  alembic.ini  config.toml.skel  pyproject.toml  requirements.txt
aircheq/: __init__.py  __main__.py  args.py  config.py  dbconfig.py  userconfig.py
aircheq/cli/: __main__.py
aircheq/operators/: __init__.py  auth.py  crawler.py  reserve.py  utils.py
aircheq/operators/parsers/: __init__.py  agqr.py  base.py  model.py  nhk_api.py  radiko.py
aircheq/operators/recorder/: __init__.py  agqr.py  base.py  radiko.py  radiru.py
aircheq/web/: __init__.py  __main__.py  utils.py
aircheq/web/aircheq_wui/: .babelrc  .gitignore  index.html  package.json  tsconfig.json  webpack.config.js
aircheq/web/aircheq_wui/lib/: index.js  index.js.map
aircheq/web/aircheq_wui/lib/components/: App.js  App.js.map  Guide.js  Guide.js.map  Program.js  Program.js.map  Search.js  Search.js.map
aircheq/web/aircheq_wui/lib/stores/: guide.js  guide.js.map  program.js  program.js.map  rule.js  rule.js.map  search.js  search.js.map
aircheq/web/aircheq_wui/src/: index.tsx
aircheq/web/aircheq_wui/src/components/: App.tsx  CheckBox.tsx  ConfirmDialog.tsx  FormUtil.tsx  Guide.tsx  Home.tsx  ModalUtil.tsx  ProgramDetail.tsx  ProgramList.tsx  Reserved.tsx  RuleDelete.tsx  RuleEditor.tsx  RuleModal.tsx  Rules.tsx  Search.tsx
aircheq/web/aircheq_wui/src/stores/: guide.ts  program.ts  rule.ts  search.ts
docker/: .env.skel  Dockerfile  docker-compose.build.yml  docker-compose.yml  entrypoint.sh
migration/: env.py
migration/versions/: b9aa2d315d5b_separate_to_services_and_channels.py
tests/: conftest.py  test_crawler.py  test_parsers.py  test_userconfig.py
tests/resources/parser/agqr/: single.html
tests/resources/parser/nhk_api/: single.json
tests/resources/parser/radiko/: single_program.xml
tests/resources/userconfig/: onlyroot.toml
(+4 files in other folders)
