[tool.poetry]
name = "aircheq"
version = "0.1.0"
description = ""
authors = ["madmaid <madmaid@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
lxml = "^4.3.4"
python-dateutil = "^2.5.3"
pytz = "^2016.4"
requests = "^2.20.1"
tabulate = "^0.8.2"
Flask = "^1.0.2"
SQLAlchemy = "^1.3.6"
alembic = "^1.0.11"

[tool.poetry.dev-dependencies]

pytest = "^4.3.0"
pytest-mock = "^1.10.4"
neovim = { version = "^0.3.1", optional = true }

[tool.poetry.extras]
pytest = ["pytest", "pytest-mock"]
neovim = ["neovim"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
