[project]
name = "aircheq"
version = "0.2.3"
description = ""
authors = [{ name = "madmaid", email = "madmaid@users.noreply.github.com" }]
requires-python = ">=3.9"
dependencies = [
    "lxml~=4.9.1",
    "python-dateutil~=2.5.3",
    "pytz~=2016.4",
    "requests~=2.20.1",
    "tabulate~=0.8.2",
    # "flask~=1.0.2",
    "Flask~=3.1.2",
    "SQLAlchemy~=1.4.54",
    "alembic~=1.0.11",
    "toml~=0.10.1",
]

[project.optional-dependencies]
pytest = []
neovim = []

[dependency-groups]
dev = [
    "pytest~=4.3.0",
    "pytest-mock~=1.10.4",
    "neovim~=0.3.1",
]
